# slayer_search

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  batch_test_lang_extract.py  config.py  config.toml  db.py  docker-compose.yaml  embeddings.py  evaluate_semantic_search.py  fly.toml  main.py  prompts.toml  pyproject.toml  scraper.py  semantic_search.py  test_lang_extract.py  utils.py  visualization.html
eval/: evaluation_summary.ipynb
scene_splits/: all_scene_splits.json
setup/: __init__.py  data_processor.py  pipeline_runner.py  scene_splitter.py  test_script_breakup.py
static/css/: style.css
static/images/favicon/: site.webmanifest
static/js/: app.js
templates/: index.html
tests/: test_database.py
utils/: data_access.py  database.py  models.py  search.py
