[project]
name = "buffy-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["bs4", 
                "requests",
                "toml",
                "rapidfuzz",
                "numpy",
                "openai",
                "dotenv",
                "pandas",
                "sqlite-vss",
                "sentence_transformers",
                "flask", 
                "torch",
                "jupyterlab",
                "notebook",
                "ipykernel",
                "einops"]